add playback example using afplay

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,15 +7,15 @@
     {
       "type": "lldb",
       "request": "launch",
-      "name": "Debug example 'drum-sequence'",
+      "name": "Debug example 'play'",
       "cargo": {
         "args": [
           "build",
-          "--example=drum-sequence",
+          "--example=play",
           "--package=afseq"
         ],
         "filter": {
-          "name": "drum-sequence",
+          "name": "play",
           "kind": "example"
         }
       },
