--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,10 @@ categories = ["audio", "player", "sequencer"]
 [dependencies]
 paste = { version = "1.0.9"}
 rhai = { version = "1.10.1", optional = true, features = ["metadata"] }
-numtraits = { version = "0.0.1" }
 
 [dev-dependencies]
 afplay = { path = "../afplay", default-features = false, features = ["cpal-output"] }
+notify = { version = "5.0.0" }
 
 [profile.release]
 debug = 1
