--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ rhai-sci = { version = "0.1", optional = true }
 [dev-dependencies]
 afplay = { path = "../afplay", default-features = false, features = ["cpal-output"] }
 notify = { version = "5.0.0" }
+lazy_static = { version = "1.4.0" }
 
 [profile.release]
 debug = 1
