--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ categories = ["audio", "player", "sequencer"]
 
 [dependencies]
 paste = { version = "1.0.9"}
+derive_more = { version = "0.99.17" }
 rust-music-theory = { version = "0.2.0" }
 rhai = { version = "1.10.1", optional = true, features = ["metadata"] }
 rhai-sci = { version = "0.1", optional = true }       
