--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ categories = ["audio", "player", "sequencer"]
 paste = { version = "1.0.9"}
 derive_more = { version = "0.99.17" }
 rust-music-theory = { version = "0.2.0" }
-rhai = { version = "1.10.1", optional = true, features = ["metadata"] }
+rhai = { version = "1.10.1", optional = true, features = ["metadata", "internals"] }
 rhai-sci = { version = "0.1", optional = true }       
+rhai-rand = { version = "0.1", optional = true }
 
 [dev-dependencies]
 afplay = { path = "../afplay", default-features = false, features = ["cpal-output"] }
@@ -23,7 +24,7 @@ lazy_static = { version = "1.4.0" }
 debug = 1
 
 [features]
-scripting = ["rhai", "rhai-sci"]
+scripting = ["rhai", "rhai-sci", "rhai-rand"]
 default = ["scripting"]
 
 [[example]]
