--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,9 @@ rust-music-theory = { version = "0.2.0" }
 rhai = { version = "1.10.1", optional = true, features = ["metadata", "internals"] }
 rhai-sci = { version = "0.1", optional = true }       
 rhai-rand = { version = "0.1", optional = true }
+afplay = { path = "../afplay", default-features = false, features = ["cpal-output"], optional = true }
 
 [dev-dependencies]
-afplay = { path = "../afplay", default-features = false, features = ["cpal-output"] }
 notify = { version = "5.0.0" }
 lazy_static = { version = "1.4.0" }
 
@@ -25,10 +25,12 @@ debug = 1
 
 [features]
 scripting = ["rhai", "rhai-sci", "rhai-rand"]
-default = ["scripting"]
+player = ["afplay"]
+default = ["scripting", "player"]
 
 [[example]]
 name = "play"
+required-features = ["player"]
 [[example]]
 name = "play-script"
-required-features = ["scripting"]
+required-features = ["scripting", "player"]
