--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ categories = ["audio", "player", "sequencer"]
 paste = { version = "1.0.9"}
 derive_more = { version = "0.99.17" }
 crossbeam-channel = { version = "0.5.6" }
+uuid = {version = "1.2.2", features = [ "v4", "fast-rng" ]}
 rust-music-theory = { version = "0.2.0" }
 rhai = { version = "1.10.1", optional = true, features = ["metadata", "internals"] }
 rhai-sci = { version = "0.1.7", optional = true }       
