--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ categories = ["audio", "player", "sequencer"]
 paste = { version = "1.0.9"}
 derive_more = { version = "0.99.17" }
 crossbeam-channel = { version = "0.5.6" }
+log = { version = "^0.4" }
+simplelog = { version = "^0.12" }
 string-error = { version = "0.1.0" }
 serde = { version = "1.0.152" }
 serde_json = { version = "1.0.91" }
