--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,23 +8,23 @@ exclude = ["assets", "examples"]
 categories = ["audio", "player", "sequencer"]
 
 [dependencies]
-paste = { version = "1.0.9"}
-derive_more = { version = "0.99.17" }
-crossbeam-channel = { version = "0.5.6" }
+paste = { version = "^1.0"}
+derive_more = { version = "^0.99" }
+crossbeam-channel = { version = "^0.5" }
 log = { version = "^0.4" }
 simplelog = { version = "^0.12" }
-string-error = { version = "0.1.0" }
-serde = { version = "1.0.152" }
-serde_json = { version = "1.0.91" }
-uuid = {version = "1.2.2", features = [ "v4", "fast-rng" ]}
-rust-music-theory = { version = "0.2.0" }
-rhai = { version = "1.11.0", optional = true, features = ["metadata", "internals", "serde"] }
-rhai-rand = { version = "0.1.4", optional = true }
+string-error = { version = "^0.1" }
+serde = { version = "^1.0" }
+serde_json = { version = "^1.0" }
+uuid = {version = "^1.3", features = [ "v4", "fast-rng" ]}
+rust-music-theory = { version = "^0.2" }
+rhai = { version = "^1.13", optional = true, features = ["metadata", "internals", "serde"] }
+rhai-rand = { version = "^0.1", optional = true }
 afplay = { path = "../afplay", default-features = false, features = ["cpal-output"], optional = true }
 
 [dev-dependencies]
-notify = { version = "5.0.0" }
-lazy_static = { version = "1.4.0" }
+notify = { version = "^5.1" }
+lazy_static = { version = "^1.4" }
 
 [profile.release]
 debug = 1
