--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ uuid = {version = "^1.3", features = [ "v4", "fast-rng" ]}
 rust-music-theory = { version = "^0.2" }
 rhai = { version = "^1.13", optional = true, features = ["metadata", "internals", "serde"] }
 rhai-rand = { version = "^0.1", optional = true }
-mlua = { version = "0.9.1", features = ["lua54", "vendored", "serialize", "macros"], optional = true }
+mlua = { version = "0.9.1", features = ["luajit52", "vendored", "macros", "unstable"], optional = true }
 afplay = { path = "../afplay", default-features = false, features = ["cpal-output"], optional = true }
 
 [dev-dependencies]
