add lib/fun.lua tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,12 @@
         "chord",
         "note",
         "notes_in_scale",
-        "Emitter"
-    ]
+        "Emitter",
+        "chain",
+        "take",
+        "totable",
+        "cycle",
+        "table.merge",
+        "euclidian"
+    ],
 }
