--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,6 @@ serde_json = { version = "^1.0" }
 uuid = {version = "^1.3", features = [ "v4", "fast-rng" ]}
 rust-music-theory = { version = "^0.2" }
 # optional -> scripting
-rhai = { version = "^1.13", features = ["metadata", "internals", "serde"], optional = true }
-rhai-rand = { version = "^0.1", optional = true }
 mlua = { version = "0.9.1", features = ["luajit52", "vendored", "macros", "unstable"], optional = true }
 # optional -> player
 afplay = { path = "../afplay", default-features = false, features = ["cpal-output"], optional = true }
@@ -34,7 +32,7 @@ lazy_static = { version = "^1.4" }
 debug = 1
 
 [features]
-scripting = ["rhai", "rhai-rand", "mlua"]
+scripting = ["mlua"]
 player = ["afplay"]
 default = ["scripting", "player"]
 
