--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,13 +20,12 @@ serde_json = { version = "^1.0" }
 uuid = {version = "^1.3", features = [ "v4", "fast-rng" ]}
 rust-music-theory = { version = "^0.2" }
 # optional -> scripting
-mlua = { version = "0.9.1", features = ["luajit52", "vendored", "macros", "unstable"], optional = true }
+mlua = { version = "^0.9", features = ["luajit52", "vendored", "macros", "unstable"], optional = true }
 # optional -> player
 afplay = { path = "../afplay", default-features = false, features = ["cpal-output"], optional = true }
 
 [dev-dependencies]
 notify = { version = "^6.1" }
-lazy_static = { version = "^1.4" }
 
 [profile.release]
 debug = 1
