--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "Lua.diagnostics.globals": [
         "note",
         "sequence",
-        "notes_in_scale",
+        "scale",
         "Emitter",
         "totable",
         "chain",
