rename Emitter binding to emitter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
         "note",
         "sequence",
         "scale",
-        "Emitter",
+        "emitter",
         "totable",
         "chain",
         "cycle",
