--- a/types/nerdo/config.json
+++ b/types/nerdo/config.json
@@ -1,7 +1,15 @@
 {
     "name": "nerdo",
-    "words"  : ["%s*emitter.*"],
-    "settings" : {
-        "Lua.runtime.version" : "Lua 5.1"
+    "words": [
+        ".*emitter.*"
+    ],
+    "settings": {
+        "Lua.runtime.version": "Lua 5.1",
+        "Lua.runtime.builtin": {
+            "debug": "disable",
+            "ffi": "disable",
+            "os": "disable",
+            "io": "disable"
+        }
     }
 }
