--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,8 @@ paste = { version = "^1.0"}
 derive_more = { version = "^0.99" }
 log = { version = "^0.4" }
 simplelog = { version = "^0.12" }
-serde = { version = "^1.0" }
-serde_json = { version = "^1.0" }
-uuid = {version = "^1.3", features = [ "v4", "fast-rng" ]}
+rand = { version = "0.8.5" }
+rand_xoshiro = { version = "0.6.0" }
 # optional -> tidal
 pest = { version = "2.7.8", optional = true}
 pest_derive = { version = "2.7.8", optional = true}
