--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,13 +2,17 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"type": "cargo",
-			"command": "build",
+			"type": "shell",
+			"command": "cargo",
+			"args": [
+				"build"
+			],
 			"problemMatcher": [
 				"$rustc"
 			],
 			"group": "build",
-			"label": "rust: cargo build"
+			"label": "rust: cargo build",
+
 		}
 	]
 }
