--- a/types/nerdo/config.json
+++ b/types/nerdo/config.json
@@ -1,7 +1,7 @@
 {
     "name": "nerdo",
     "words": [
-        ".*emitter.*"
+        "%s*rhythm%s*%(?%s*%{"
     ],
     "settings": {
         "Lua.runtime.version": "Lua 5.1",
