--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,26 +11,42 @@ categories = ["audio", "player", "sequencer"]
 # required
 lazy_static = { version = "^1.4" }
 anyhow = { version = "^1.0" }
-paste = { version = "^1.0"}
+paste = { version = "^1.0" }
 derive_more = { version = "^0.99" }
 log = { version = "^0.4" }
 simplelog = { version = "^0.12" }
 rand = { version = "0.8.5" }
 rand_xoshiro = { version = "0.6.0" }
 # optional -> tidal
-pest = { version = "2.7.8", optional = true}
-pest_derive = { version = "2.7.8", optional = true}
+pest = { version = "2.7.8", optional = true }
+pest_derive = { version = "2.7.8", optional = true }
 # optional -> dhat-profiler
 dhat = { version = "0.3.2", optional = true }
-# optional -> scripting
-mlua = { version = "^0.9", features = ["lua51", "vendored", "macros", "unstable"], optional = true }
 # optional -> player
 crossbeam-channel = { version = "^0.5", optional = true }
-afplay = { git = "ssh://git@git.renoise.com:2229/nerdbox/afplay.git", default-features = false, features = ["cpal-output"], optional = true }
+afplay = { git = "ssh://git@git.renoise.com:2229/nerdbox/afplay.git", default-features = false, features = [
+    "cpal-output",
+], optional = true }
+# optional -> scripting
+[target.'cfg(target_arch = "arm")'.dependencies]
+# LuaJit won't compile on arm32 -> use Lua51 instead
+mlua = { version = "^0.9", features = [
+    "lua51",
+    "vendored",
+    "macros",
+    "unstable",
+], optional = true }
+[target.'cfg(not(target_arch = "arm"))'.dependencies]
+mlua = { version = "^0.9", features = [
+    "luajit",
+    "vendored",
+    "macros",
+    "unstable",
+], optional = true }
 
 [dev-dependencies]
 notify = { version = "^6.1" }
-ctrlc = { version = "3.4.0"}
+ctrlc = { version = "3.4.0" }
 
 [profile.release]
 debug = 1
