--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,26 +22,17 @@ pest = { version = "2.7.8", optional = true }
 pest_derive = { version = "2.7.8", optional = true }
 # optional -> dhat-profiler
 dhat = { version = "0.3.2", optional = true }
-# optional -> player
-crossbeam-channel = { version = "^0.5", optional = true }
-afplay = { git = "ssh://git@git.renoise.com:2229/nerdbox/afplay.git", default-features = false, features = [
-    "cpal-output",
-], optional = true }
 # optional -> scripting
-[target.'cfg(target_arch = "arm")'.dependencies]
-# LuaJit won't compile on arm32 -> use Lua51 instead
 mlua = { version = "^0.9", features = [
     "lua51",
     "vendored",
     "macros",
     "unstable",
 ], optional = true }
-[target.'cfg(not(target_arch = "arm"))'.dependencies]
-mlua = { version = "^0.9", features = [
-    "luajit",
-    "vendored",
-    "macros",
-    "unstable",
+# optional -> player
+crossbeam-channel = { version = "^0.5", optional = true }
+afplay = { git = "https://github.com/emuell/afplay", default-features = false, features = [
+    "cpal-output",
 ], optional = true }
 
 [dev-dependencies]
