--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,10 @@
 name = "afseq"
 version = "0.1.0"
 edition = "2021"
-description = "afplay sequencer"
+description = "Experimental, dynamic, imperative and functional music sequence generator for Rust and Lua"
 authors = ["Eduard Müller <mail@emuell.net>"]
 exclude = ["assets", "examples"]
-categories = ["audio", "player", "sequencer"]
+categories = ["audio", "midi", "sequencer"]
 
 [dependencies]
 # required
@@ -17,9 +17,9 @@ log = { version = "^0.4" }
 simplelog = { version = "^0.12" }
 rand = { version = "0.8.5" }
 rand_xoshiro = { version = "0.6.0" }
-# optional -> tidal
-pest = { version = "2.7.8", optional = true }
-pest_derive = { version = "2.7.8", optional = true }
+fraction = { version = "0.15.2" }
+pest = { version = "2.7.8" }
+pest_derive = { version = "2.7.8" }
 # optional -> dhat-profiler
 dhat = { version = "0.3.2", optional = true }
 # optional -> scripting
@@ -34,7 +34,6 @@ crossbeam-channel = { version = "^0.5", optional = true }
 afplay = { git = "https://github.com/emuell/afplay", default-features = false, features = [
     "cpal-output",
 ], optional = true }
-fraction = { version = "0.15.2" }
 
 [dev-dependencies]
 notify = { version = "^6.1" }
@@ -45,10 +44,9 @@ debug = 1
 
 [features]
 dhat-profiler = ["dhat"]
-tidal = ["pest", "pest_derive"]
 scripting = ["mlua"]
 player = ["crossbeam-channel", "afplay"]
-default = ["scripting", "tidal"]
+default = ["scripting"]
 
 [[example]]
 name = "play"
