use Criterion instead of Bencher

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ afplay = { git = "https://github.com/emuell/afplay", default-features = false, f
 [dev-dependencies]
 notify = { version = "^6.1" }
 ctrlc = { version = "^3.4" }
-bencher = { version = "^0.1" }
+criterion = { version = "^0.5" }
 
 [profile.release]
 debug = 1
