add rhythm and scripted rhythm benchmarks (create, clone & run)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ player = ["crossbeam-channel", "afplay"]
 default = ["scripting"]
 
 [[bench]]
-name = "cycle"
+name = "benches"
 harness = false
 
 [[example]]
