separate scripting from the scripting backend feature to simplify cfg ifs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,7 +31,7 @@
         "args": [
           "build",
           "--example=play-script",
-          "--features=scripting,player",
+          "--features=player",
           "--package=afseq"
         ],
         "filter": {
