--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ categories = ["audio", "midi", "sequencer"]
 lazy_static = { version = "^1.4" }
 anyhow = { version = "^1.0" }
 paste = { version = "^1.0" }
-derive_more = { version = "^0.99" }
+derive_more = { version = "^1.0", features = ["from", "into", "display"] }
 log = { version = "^0.4" }
 simplelog = { version = "^0.12" }
 rand = { version = "^0.8" }
