--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,9 +30,9 @@ afplay = { git = "https://github.com/emuell/afplay", default-features = false, f
 ], optional = true }
 
 # optional -> scripting
-mlua = { version = "^0.9", default-features = false, features = [
+mlua = { version = "^0.10", default-features = false, features = [
     "vendored",
-    "unstable",
+    "error-send"
 ], optional = true }
 
 [dev-dependencies]
@@ -66,7 +66,7 @@ lua-jit = ["mlua/luajit"]
 luau = ["mlua/luau"]
 luau-jit = ["mlua/luau-jit"]
 
-# default features enable scripting with a luaJIT interpreter 
+# default features enable scripting with a luaJIT interpreter
 default = ["scripting", "lua-jit"]
 
 [lib]
