add mdbook API generator and vscode launch tasks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,8 @@
     "Lua.workspace.library": [
         "types/nerdo"
     ],
+    "Lua.workspace.ignoreDir": [
+        "docs"
+    ],
     "Lua.hint.arrayIndex": "Disable"
 }
