enable rust caches via the setup-rust-toolchain@v1 action

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -11,7 +11,15 @@ jobs:
   runBenchmark:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: boa-dev/criterion-compare-action@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - name: Install Rust
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+
+      - name: Benchmark
+        uses: boa-dev/criterion-compare-action@v3
         with:
           branchName: ${{ github.base_ref }}
