--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,10 +1,9 @@
 name: Build & Deploy Docs
 
 on:
-  # automatically update docs when pushing to master
   push:
     branches: [ "master" ]
-  # also allow to run the workflow manually from the actions tab
+  # allow running the workflow from the actions tab
   workflow_dispatch:
 
 jobs:
@@ -18,6 +17,8 @@ jobs:
 
       - name: Install Rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
+        with: 
+          cache-workspaces: "docs"
 
       - name: Generate API
         run: |
