use multiple code example blocks in docs, where it fits to ease copying them

--- a/docs/book.toml
+++ b/docs/book.toml
@@ -16,6 +16,9 @@ max-level = 3
 [output.html]
 default-theme = "dark"
 preferred-dark-theme = "ayu"
+git-repository-url = "https://github.com/emuell/afseq"
+git-repository-icon = "fa-github"
+edit-url-template = "https://github.com/emuell/afseq/edit/master/docs/{path}"
 additional-css = [ "src/styles.css" ]
 
 [output.linkcheck]
