--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "afseq"
-version = "0.4.1"
+version = "0.4.2"
 edition = "2021"
 description = "Experimental, dynamic, imperative and functional music sequence generator for Rust and Lua"
-authors = ["Eduard Müller <mail@emuell.net>"]
+authors = ["Eduard Müller <mail@emuell.net>", "unless <unlessgames@gmail.com>"]
 exclude = ["assets", "examples"]
 categories = ["audio", "midi", "sequencer"]
 
