--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,8 @@ dhat = { version = "^0.3", optional = true }
 
 # optional -> player
 crossbeam-channel = { version = "^0.5", optional = true }
-afplay = { git = "https://github.com/emuell/afplay", default-features = false, features = [
-    "cpal-output",
+phonic = { version = "^0.3", default-features = false, features = [
+    "cpal-output"
 ], optional = true }
 
 # optional -> scripting
@@ -56,7 +56,7 @@ debug = "full"
 dhat-profiler = ["dhat"]
 
 # example player implementation
-player = ["crossbeam-channel", "afplay"]
+player = ["crossbeam-channel", "phonic"]
 
 # lua scripting
 scripting = ["mlua"]
