add new cpal/sokol output features and allow fix lib complication for emscripten

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
         "args": [
           "build",
           "--example=play",
-          "--features=player",
+          "--features=player,cpal-output",
         ],
         "filter": {
           "name": "play",
@@ -30,7 +30,7 @@
         "args": [
           "build",
           "--example=play-script",
-          "--features=player",
+          "--features=player,cpal-output",
         ],
         "filter": {
           "name": "play-script",
