--- a/docs/.vscode/launch.json
+++ b/docs/.vscode/launch.json
@@ -17,7 +17,7 @@
                 }
             },
             "args": [
-                "${workspaceFolder}/../types/nerdo/library",
+                "${workspaceFolder}/../types/pattrns/library",
                 "${workspaceFolder}/src"
             ],
         },
