--- a/docs/book.toml
+++ b/docs/book.toml
@@ -3,7 +3,7 @@ authors = ["mail@emuell.net"]
 language = "en"
 multilingual = false
 src = "src"
-title = "AFSEQ"
+title = "pattrns"
 
 [build]
 build-dir = "out"
@@ -16,9 +16,9 @@ max-level = 3
 [output.html]
 default-theme = "dark"
 preferred-dark-theme = "ayu"
-git-repository-url = "https://github.com/emuell/afseq"
+git-repository-url = "https://github.com/emuell/pattrns"
 git-repository-icon = "fa-github"
-edit-url-template = "https://github.com/emuell/afseq/edit/master/docs/{path}"
+edit-url-template = "https://github.com/emuell/pattrns/edit/master/docs/{path}"
 additional-css = [ "src/styles.css" ]
 
 [output.linkcheck]
