--- a/examples/playground/.vscode/settings.json
+++ b/examples/playground/.vscode/settings.json
@@ -10,7 +10,7 @@
         "ffi": "disable",
     },
     "Lua.workspace.library": [
-        "../../types/nerdo"
+        "../../types/pattrns"
     ],
     "Lua.hint.arrayIndex": "Disable"
 }
