--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ mlua = { version = "^0.10", default-features = false, features = [
 
 # optional -> player
 crossbeam-channel = { version = "^0.5", optional = true }
+dashmap = { version = "^6.1", optional = true }
 phonic = { version = "^0.7", default-features = false, optional = true }
 # phonic = { path = "../phonic", default-features = false, optional = true }
 
@@ -62,7 +63,7 @@ debug = "full"
 dhat-profiler = ["dhat"]
 
 # example player implementation
-player = ["crossbeam-channel", "phonic"]
+player = ["crossbeam-channel", "dashmap", "phonic"]
 # example player's audio output driver 
 sokol-output = ["phonic/sokol-output"]
 cpal-output = ["phonic/cpal-output"]
